# NYC-Connections

./: .gitignore  readme.md
back/: Cargo.toml  dataset.json
back/src/: main.rs  utils.rs
back/src/server/: historic.rs  llm.rs  mod.rs  server.rs
back/src/word_gen/: mod.rs
front/: package-lock.json  package.json
front/src/: Historic.tsx  Home.tsx  LLM.tsx  main.tsx  store.ts
front/src/components/: Board.tsx  Buttons.tsx  Card.tsx  Groups.tsx
front/src/types/: Games.ts
