[package]
name = "connections"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.8.4", features = ["macros"]}
tokio = {version="1.45.1", features = ["full"]}
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
ollama-rs = "0.3.1"
tower-http = {version = "0.6.2", features = ["cors"]}
